Modificaciones para agregar BEM

--- a/index.html
+++ b/index.html
@@ -74,99 +74,96 @@
                 </div>
             </section>
 
-            <section class="sectionBgWhite">
-                <div class="centerDiv">
-                    <h2 class="tituloSeccion">Tour dates</h2>
+            <section class="sectionTour">
+                <h2 class="tituloSeccion">Tour dates</h2>
                     <table class="tourTable">
                         <tr>
-                            <td class="numeroTourDate">16</td>
-                            <td class="fechaTourDate">
+                            <td class="tourTable__numeroTourDate">16</td>
+                            <td class="tourTable__fechaTourDate">
                                 Fri
                                 <br>
                                 Apr
                             </td>
-                            <td class="nombreEventoTourDate">Sunbar Tempe - Tempe, AZ</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
+                            <td class="tourTable__nombreEventoTourDate">Sunbar Tempe - Tempe, AZ</td>
+                            <td class="tourTable__buyTicket">
+                                <a class="tourTable__buyDesktop" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
                                     <img src="./images/icons/ico_buy.png" alt="">Buy tickets
                                 </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
+                                <a class="tourTable__icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
                                     <img src="./images/icons/ticket.png" alt="ticket">
                                 </a>
                             </td>
                         </tr>
                         <tr>
-                            <td class="numeroTourDate">17</td>
-                            <td class="fechaTourDate">
+                            <td class="tourTable__numeroTourDate">17</td>
+                            <td class="tourTable__fechaTourDate">
                                 Sat
                                 <br>
                                 Apr
                             </td>
-                            <td class="nombreEventoTourDate">The Cuban Club - Tampa, FL</td>
-                            <td class="buyTicket">
-                                <a class="buy" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
+                            <td class="tourTable__nombreEventoTourDate">The Cuban Club - Tampa, FL</td>
+                            <td class="tourTable__buyTicket">
+                                <a class="tourTable__buyDesktop" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
                                     <img src="./images/icons/ico_buy.png" alt="">Buy tickets
                                 </a>
-                                <a class="icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
+                                <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
                                     <img src="./images/icons/ticket.png" alt="ticket">
                                 </a>
                             </td>
                         </tr>
                     </table>
-                </div>
                 <div class="showMore">
-                    <a href="./views/tour.html">Show all</a>
+                    <a class="showMoreTitle" href="./views/tour.html">Show all</a>
                 </div>
             </section>
 
             <section class="sectionMusicHome">
-                <div class="titleMusicHome">
-                    <h2 class="tituloSeccion">Last releases</h2>
+                <div class="sectionMusicHome__title">
+                    <h2 class="sectionMusicHome__title--margin">Last releases</h2>
                 </div>
-                <div class="homePhoto1">
+                <div class="sectionMusicHome__homePhoto--1">
                     <a href="">
-                        <img class="miniAlbumHome" src="./images/music/01.jpg" alt="Album 01">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/01.jpg" alt="Album 01">
                     </a>
                 </div>
-                <div class="homePhoto2">
+                <div class="sectionMusicHome__homePhoto--2">
                     <a href="">
-                        <img class="miniAlbumHome" src="./images/music/03.jpg" alt="Album 02">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/03.jpg" alt="Album 02">
                     </a>
                 </div>
-                <div class="homePhoto3">
+                <div class="sectionMusicHome__homePhoto--3">
                     <a href="">
-                        <img class="miniAlbumHome" src="./images/music/05.jpg" alt="Album 03">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/05.jpg" alt="Album 03">
                     </a>
                 </div>
-                <div class="homePhoto4">
+                <div class="sectionMusicHome__homePhoto--4">
                     <a href="">
-                        <img class="miniAlbumHome" src="./images/music/07.jpg" alt="Album 04">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/07.jpg" alt="Album 04">
                     </a>
                 </div>
-                <div class="showMore">
+                <div class="sectionMusicHome__showMore">
                     <a href="./views/music.html">Show all</a>
                 </div> 
             </section>
             
             <section class="sectionGalleryHome">
-                <div class="titleGalleryHome">
-                    <h2 class="tituloSeccion">Galeria</h2>
+                <div class="sectionGalleryHome__title">
+                    <h2 class="sectionGalleryHome__title--margin">Galeria</h2>
                 </div>
-
-                <div class="galleryHomePhoto1">
-                    <img class="miniCoverHome" src="./images/photos/mini001.png" alt="Foto 1">
+                <div class="sectionGalleryHome__photo--1">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini001.png" alt="Foto 1">
                 </div>
-                <div class="galleryHomePhoto2">
-                    <img class="miniCoverHome" src="./images/photos/mini002.png" alt="Foto 2">
+                <div class="sectionGalleryHome__photo--2">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini002.png" alt="Foto 2">
                 </div>
-                <div class="galleryHomePhoto3">
-                    <img class="miniCoverHome" src="./images/photos/mini003.png" alt="Foto 3">
+                <div class="sectionGalleryHome__photo--3">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini003.png" alt="Foto 3">
                 </div>
-                <div class="galleryHomePhoto4">
-                    <img class="miniCoverHome" src="./images/photos/mini004.png" alt="Foto 4">
+                <div class="sectionGalleryHome__photo--4">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini004.png" alt="Foto 4">
                 </div>
                  
-                <div class="showMore">
+                <div class="sectionGalleryHome__showMore">
                     <a href="./views/gallery.html">Show all</a>
                 </div>
             </section>
