--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Home | Nora En Pure</title>
+
+        <meta name="description" content="Sitio oficial de Nora En Pure, una de las lideres mundiales en Deep House. Conecte con el artista y obtenga las últimas noticias, tours y lanzamientos.">
+        <meta name="keywords" content="nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
+
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -16,12 +20,12 @@
         <header class="header">
             <div class="header__logoContainer">
                 <a href="./index.html">
-                    <img src="./images/noraenpure_logo_black.png" alt="Logo" class="header__logo">
+                    <img src="./images/noraenpure_logo_black.png" alt="Logo de Nora En Pure." class="header__logo">
                 </a>
             </div>
             <div class="header__icoMenuMobile">
                 <a href="javascript:void(0);" onclick="myFunction()">
-                    <img src="./images/icons/ico_mobile_menu.png" alt="Menu mobile">
+                    <img src="./images/icons/ico_mobile_menu.png" alt="Icono de menu mobile.">
                 </a>
             </div>
             <nav class="header__navMobile" id="navMobile">
@@ -54,13 +58,13 @@
                     </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="./images/banners/bannerPodcast.png" class="d-block w-100" alt="...">
+                            <img src="./images/banners/bannerPodcast.png" class="d-block w-100" alt="Banner nuevo episodio de Purified.">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/banners/banner01.jpg" class="d-block w-100" alt="...">
+                            <img src="./images/banners/banner01.jpg" class="d-block w-100" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
                         </div>
                         <div class="carousel-item">
-                            <img src="./images/banners/banner02.jpg" class="d-block w-100" alt="...">
+                            <img src="./images/banners/banner02.jpg" class="d-block w-100" alt="Nora En Pure en el escenario tocando el piano durante un concierto.">
                         </div>
                     </div>
                     <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -72,6 +76,36 @@
                         <span class="visually-hidden">Next</span>
                     </button>
                 </div>
+            </section>
+
+            <section class="bio">
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col-md-5">
+                        <div class="row">
+                            <img class="bio__photo" src="./images/photos/mini001.png" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
+                        </div>
+                    </div>
+                    <div class="col-md-7">
+                        <div class="row">
+                            <h1 class="bio__titulo">Nora En Pure<span class="bio__titulo--normal">, Bio</span></h1>
+                        </div>
+                        <div class="row">
+                            <p class="bio__texto">
+                                Conectando a la perfección sonidos y estilos dispares, el nombre de Nora En Pure se ha convertido en sinónimo de instrumentos orgánicos, pistas de piano emotivas y melodías encantadoras.
+                            </p>
+                            <p class="bio__texto">
+                                Nacida en Sudáfrica y viviendo en Suiza, la <span class="bio__texto--bold">reina del Deep House</span>, <span class="bio__texto--italic">Daniela Di Lillo</span> vio los inicios de su carrera musical en 2009, lanzando sus producciones debut a través de los sellos <span class="bio__texto--italic">Enormous Tunes</span> y <span class="bio__texto--italic">Tokenish</span>, como miembro principal del grupo <span class="bio__texto--italic">Helvetic Nerds</span>. En 2013, la pista revolucionaria de Nora En Pure, <span class="bio__texto--italic">"Come With Me"</span>, la catapultó al centro de atención y despertó un gran interés en su sonido. Con innumerables éxitos como <span class="bio__texto--italic">"Morning Dew", "Lake Arrowhead", "Tears In Your Eyes", "We Found Love" y "Birthright"</span>, la han llevado a crear remixes oficiales para <span class="bio__texto--italic">Faithless, Eelke Kleijn</span> y <span class="bio__texto--italic">Sofi Tukker</span>. Su BBC Radio 1 Essential Mix de 2016 la ayudó a solidificar su reputación y obtener residencias en los lugares de música dance más emblemáticos, incluidos <span class="bio__texto--italic">Wynn Las Vegas</span> y <span class="bio__texto--italic">Privilege Ibiza</span>. Ganar el premio a la <span class="bio__texto--bold">Mejor Artista Femenina (House)</span> y recibir una nominación al Mejor Podcast/Programa de Radio por Purified en los <span class="bio__texto--italic">Premios IDMA 2019</span>.
+                            </p>
+                            <p class="bio__texto">
+                                Nutriendo su marca Purified con precisión, Purified Radio se ha convertido en un programa semanal, que se estrena todos los sábados por la noche en SiriusXM Chill y ofrece una dosis de una hora de la mejor música house profunda, melódica y tecnológica.
+                            </p>
+                            <p class="bio__texto">
+                                Curando alineaciones y organizando eventos de Purified con entradas agotadas en todo el mundo en Miami, Nueva York, San Francisco, Palm Springs, Zürich, Praga, Purified ha dado la bienvenida a gente como Pete Tong, Gorgon City, Kidnap, Moonwalk, Eelke Kleijn y Sonny Fodera detrás. las cubiertas.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
             </section>
 
             <section class="sectionTour">
@@ -87,10 +121,10 @@
                             <td class="tourTable__nombreEventoTourDate">Sunbar Tempe - Tempe, AZ</td>
                             <td class="tourTable__buyTicket">
                                 <a class="tourTable__buyDesktop" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
-                                    <img src="./images/icons/ico_buy.png" alt="">Buy tickets
+                                    <img src="./images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                                 </a>
                                 <a class="tourTable__icoTicketMobile" target="_blank" href="https://wl.seetickets.us/event/Nora-En-Pure/422288?afflky=RelentlessBeats">
-                                    <img src="./images/icons/ticket.png" alt="ticket">
+                                    <img src="./images/icons/ticket.png" alt="Icono de compra.">
                                 </a>
                             </td>
                         </tr>
@@ -104,10 +138,10 @@
                             <td class="tourTable__nombreEventoTourDate">The Cuban Club - Tampa, FL</td>
                             <td class="tourTable__buyTicket">
                                 <a class="tourTable__buyDesktop" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
-                                    <img src="./images/icons/ico_buy.png" alt="">Buy tickets
+                                    <img src="./images/icons/ico_buy.png" alt="Icono de compra.">Buy tickets
                                 </a>
                                 <a class="tourTable__icoTicketMobile" target="_blank" href="https://www.eventbrite.com/e/shipwrecked-music-festival-tickets-94204290569?aff=aff0bandsintown&appId=JVK_aben-ra-cher&comeFrom=267&artist_event_id=1021682825">
-                                    <img src="./images/icons/ticket.png" alt="ticket">
+                                    <img src="./images/icons/ticket.png" alt="Icono de compra.">
                                 </a>
                             </td>
                         </tr>
@@ -123,22 +157,22 @@
                 </div>
                 <div class="sectionMusicHome__homePhoto--1">
                     <a href="">
-                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/01.jpg" alt="Album 01">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/01.jpg" alt="Cover del track Nora En Pure Monsoon.">
                     </a>
                 </div>
                 <div class="sectionMusicHome__homePhoto--2">
                     <a href="">
-                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/03.jpg" alt="Album 02">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/03.jpg" alt="Cover del track Nora En Pure Enchantment.">
                     </a>
                 </div>
                 <div class="sectionMusicHome__homePhoto--3">
                     <a href="">
-                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/05.jpg" alt="Album 03">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/05.jpg" alt="Cover del track Nora En Pure Wetlands.">
                     </a>
                 </div>
                 <div class="sectionMusicHome__homePhoto--4">
                     <a href="">
-                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/07.jpg" alt="Album 04">
+                        <img class="sectionMusicHome__miniAlbumHome" src="./images/music/07.jpg" alt="Cover del track Nora en Pure Delta, Bartok.">
                     </a>
                 </div>
                 <div class="sectionMusicHome__showMore">
@@ -151,16 +185,16 @@
                     <h2 class="sectionGalleryHome__title--margin">Galeria</h2>
                 </div>
                 <div class="sectionGalleryHome__photo--1">
-                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini001.png" alt="Foto 1">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini001.png" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
                 </div>
                 <div class="sectionGalleryHome__photo--2">
-                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini002.png" alt="Foto 2">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini002.png" alt="Nora En Pure en un festival, posando frente a una vuelta al mundo, mirando hacia la derecha con los brazos abiertos.">
                 </div>
                 <div class="sectionGalleryHome__photo--3">
-                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini003.png" alt="Foto 3">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini003.png" alt="Nora en Pure durante un show en vivo.">
                 </div>
                 <div class="sectionGalleryHome__photo--4">
-                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini004.png" alt="Foto 4">
+                    <img class="sectionGalleryHome__miniCover" src="./images/photos/mini004.png" alt="Nora en Pure durante un show en vivo, mirando hacia el público.">
                 </div>
                  
                 <div class="sectionGalleryHome__showMore">
@@ -169,28 +203,28 @@
             </section>
 
             <footer class="footer">
-                <img class="footer__logoFooter" src="./images/noraenpure_logo_big.png" alt="Logo">
+                <img class="footer__logoFooter" src="./images/noraenpure_logo_big.png" alt="Logo de Nora En Pure.">
                 <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
                 <div class="footer__socialMediaContainer">
                     <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                        <img src="./images/icons/fb_gray.png" alt="">
+                        <img src="./images/icons/fb_gray.png" alt="Icono de Facebook.">
                     </a>
                     <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                        <img src="./images/icons/ig_gray.png" alt="">
+                        <img src="./images/icons/ig_gray.png" alt="Icono de Instagram.">
                     </a>
                     <a target="_blank" href="https://twitter.com/NoraEnPure">
-                        <img src="./images/icons/tw_gray.png" alt="">
+                        <img src="./images/icons/tw_gray.png" alt="Icono de Twitter.">
                     </a>
                     <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                        <img src="./images/icons/yt_gray.png" alt="">
+                        <img src="./images/icons/yt_gray.png" alt="Icono de YouTube.">
                     </a>
                     <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                        <img src="./images/icons/sp_gray.png" alt="">
+                        <img src="./images/icons/sp_gray.png" alt="Icono de Spotify.">
                     </a>
                 </div>
                 <div class="footer__upArrow">
                     <a href="#topPage">
-                        <img src="./images/icons/up_arrow.png" alt="Icono para subir">
+                        <img src="./images/icons/up_arrow.png" alt="Icono de flecha para ir a la parte superir de la pagina.">
                     </a>
                 </div>
             </footer>
