--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <meta name="description" content="Sitio oficial de Nora En Pure, una de las lideres mundiales en Deep House. Conecte con el artista y obtenga las últimas noticias, tours y lanzamientos.">
         <meta name="keywords" content="nora en pure, purified, melodic deep house, chill music, deep house, dj podcast">
 
+        <link rel="icon" type="image/x-icon" href="./images/favicon.ico"/>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
         <link rel="preconnect" href="https://fonts.gstatic.com">
