--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="./css/style.css">
+        <script src="https://kit.fontawesome.com/10772b8d31.js" crossorigin="anonymous"></script>
     </head>
     
     <body>
@@ -212,25 +213,28 @@
                 <img class="footer__logoFooter" src="./images/noraenpure_logo_big.png" alt="Logo de Nora En Pure.">
                 <p class="footer__copyrightText">Copyright © 2021 / Sebastian Aranda</p>
                 <div class="footer__socialMediaContainer">
-                    <a target="_blank" href="https://www.facebook.com/NoraEnPure/">
-                        <img src="./images/icons/fb_gray.png" alt="Icono de Facebook.">
+                    <a aria-label="Ícono de Facebook." target="_blank" href="https://www.facebook.com/NoraEnPure/">
+                        <i class="fab fa-facebook-f fa-2x" title="Ícono de Facebook."></i>
                     </a>
-                    <a target="_blank" href="https://www.instagram.com/noraenpure/">
-                        <img src="./images/icons/ig_gray.png" alt="Icono de Instagram.">
+                    <a aria-label="Ícono de Instagram." target="_blank" href="https://www.instagram.com/noraenpure/">
+                        <i class="fab fa-instagram fa-2x" title="Ícono de Instagram."></i>
                     </a>
-                    <a target="_blank" href="https://twitter.com/NoraEnPure">
-                        <img src="./images/icons/tw_gray.png" alt="Icono de Twitter.">
+                    <a aria-label="Ícono de Twitter." target="_blank" href="https://twitter.com/NoraEnPure">
+                        <i class="fab fa-twitter fa-2x" title="Ícono de Twitter."></i>
                     </a>
-                    <a target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
-                        <img src="./images/icons/yt_gray.png" alt="Icono de YouTube.">
+                    <a aria-label="Ícono de YouTube." target="_blank" href="https://www.youtube.com/channel/UCdUXAN90UQV4sxNehj5Vflw">
+                        <i class="fab fa-youtube fa-2x" title="Ícono de YouTube."></i>
                     </a>
-                    <a target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
-                        <img src="./images/icons/sp_gray.png" alt="Icono de Spotify.">
+                    <a aria-label="Ícono de Spotify." target="_blank" href="https://open.spotify.com/artist/24DO0PijjITGIEWsO8XaPs">
+                        <i class="fab fa-spotify fa-2x" title="Ícono de Spotify."></i>
                     </a>
                 </div>
                 <div class="footer__upArrow">
-                    <a href="#topPage">
-                        <img src="./images/icons/up_arrow.png" alt="Icono de flecha para ir a la parte superir de la pagina.">
+                    <a href="#topPage" aria-label="Ir a la parte superior de la página.">
+                        <span class="fa-stack" style="vertical-align: top;">
+                            <i aria-hidden="true" class="far fa-circle fa-stack-2x"></i>
+                            <i aria-hidden="true" class="fas fa-chevron-up fa-stack-1x" title="Ir a la parte superior de la página."></i>
+                        </span>
                     </a>
                 </div>
             </footer>
