--- a/index.html
+++ b/index.html
@@ -52,31 +52,8 @@
         
         <div class="mainGrid">
             <section class="bannerHome">
-                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-indicators">
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                    </div>
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="./images/banners/bannerPodcast.png" class="d-block w-100" alt="Banner nuevo episodio de Purified.">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/banners/banner01.jpg" class="d-block w-100" alt="Nora En Pure sonriendo, con el público a sus espaldas.">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="./images/banners/banner02.jpg" class="d-block w-100" alt="Nora En Pure en el escenario tocando el piano durante un concierto.">
-                        </div>
-                    </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
+                <div class="videoWrapper">
+                    <iframe width="560" height="349" src="https://www.youtube.com/embed/BSGdHPouM9I?autoplay=1&loop=1&rel=0&showinfo=0&color=white&iv_load_policy=3&playlist=BSGdHPouM9I&mute=1" frameborder="0" allowfullscreen></iframe>
                 </div>
             </section>
 
